# Chicken-Invaders

./: .gitignore  .gitlab-ci.yml  README.md
MATF_Chicken_Invaders/: CMakeLists.txt  MATF_Chicken_Invaders.pro  database.db  hofwindow.cpp  hofwindow.h  hofwindow.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sounds.qrc
MATF_Chicken_Invaders/forms/: chooselevelwindow.ui  gamewindow.ui  hofwindow.ui  maingamewindow.ui  mainwindow.ui  optionswindow.ui  quitgamewindow.ui  usernamewindow.ui  winwindow.ui
MATF_Chicken_Invaders/headers/: balloonchicken.h  balloongame.h  bigchicken.h  bigegg.h  bigeggbullets.h  bossgame.h  chicken.h  chickenmatrixgame.h  chooselevelwindow.h  drumstick.h  egg.h  eggchicken.h  eggchickengame.h  gamewindow.h  gift.h  hofwindow.h  lives.h  maingamewindow.h  mainwindow.h  meteor.h  meteorshowergame.h  optionswindow.h  planet.h  planetchicken.h  planetchickengame.h  player.h  projectile.h  quitgamewindow.h  roastChicken.h  score.h  sideChicken.h  sideChickenGame.h  sidemeteorshowergame.h  sidespaceship.h  spaceship.h  usernamewindow.h  wavechicken.h  wavechickengame.h  winwindow.h
MATF_Chicken_Invaders/headers/enemies_h/: balloonchicken.h  bigchicken.h  bigegg.h  bigeggbullets.h  chicken.h  egg.h  eggchicken.h  meteor.h  planetchicken.h  sideChicken.h  wavechicken.h
MATF_Chicken_Invaders/headers/games_h/: balloongame.h  bossgame.h  chickenmatrixgame.h  eggchickengame.h  meteorshowergame.h  planetchickengame.h  sideChickenGame.h  sidemeteorshowergame.h  wavechickengame.h
MATF_Chicken_Invaders/headers/main_h/: chooselevelwindow.h  gamewindow.h  hofwindow.h  maingamewindow.h  mainwindow.h  optionswindow.h  planet.h  player.h  quitgamewindow.h  score.h  usernamewindow.h  winwindow.h
MATF_Chicken_Invaders/headers/spaceship_h/: projectile.h  sidespaceship.h  spaceship.h
MATF_Chicken_Invaders/headers/treets_h/: drumstick.h  gift.h  roastChicken.h
MATF_Chicken_Invaders/src/: balloonGame.cpp  balloonchicken.cpp  bigchicken.cpp  bigegg.cpp  bigeggbullets.cpp  bossgame.cpp  chicken.cpp  chickenmatrixgame.cpp  chooselevelwindow.cpp  drumstick.cpp  egg.cpp  eggchicken.cpp  eggchickengame.cpp  gamewindow.cpp  gift.cpp  hofwindow.cpp  lives.cpp  main.cpp  maingamewindow.cpp  mainwindow.cpp  meteor.cpp  meteorshowergame.cpp  optionswindow.cpp  planet.cpp  planetchicken.cpp  planetchickengame.cpp  player.cpp  projectile.cpp  quitgamewindow.cpp  roastChicken.cpp  score.cpp  sideChicken.cpp  sideChickenGame.cpp  sidemeteorshowergame.cpp  sidespaceship.cpp  spaceship.cpp  usernamewindow.cpp  wavechicken.cpp  wavechickengame.cpp  winwindow.cpp
MATF_Chicken_Invaders/src/enemies/: balloonchicken.cpp  bigchicken.cpp  bigegg.cpp  bigeggbullets.cpp  chicken.cpp  egg.cpp  eggchicken.cpp  meteor.cpp  planetchicken.cpp  sideChicken.cpp  wavechicken.cpp
MATF_Chicken_Invaders/src/games/: balloonGame.cpp  bossgame.cpp  chickenmatrixgame.cpp  eggchickengame.cpp  meteorshowergame.cpp  planetchickengame.cpp  sideChickenGame.cpp  sidemeteorshowergame.cpp  wavechickengame.cpp
MATF_Chicken_Invaders/src/main/: chooselevelwindow.cpp  gamewindow.cpp  hofwindow.cpp  main.cpp  maingamewindow.cpp  mainwindow.cpp  optionswindow.cpp  planet.cpp  player.cpp  quitgamewindow.cpp  score.cpp  usernamewindow.cpp  winwindow.cpp
MATF_Chicken_Invaders/src/spaceship/: projectile.cpp  sidespaceship.cpp  spaceship.cpp
MATF_Chicken_Invaders/src/treets/: drumstick.cpp  gift.cpp  roastChicken.cpp
build-MATF_Chicken_Invaders-Desktop-Debug/: Makefile  moc_bigegg.cpp  moc_bigeggbullets.cpp  moc_chicken.cpp  moc_egg.cpp  (+18 more)
(+50 files in other folders)
